--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     #     reservations:
     #       cpus: '0.128'
     #       memory: 128M
-    image: 211125430268.dkr.ecr.ap-southeast-1.amazonaws.com/food-delivery-config-server:16
+    image: 211125430268.dkr.ecr.ap-southeast-1.amazonaws.com/food-delivery-config-server:latest
     restart: always
     environment:
       PORT: 8888
