--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,35 +70,32 @@ services:
       - food-delivery-discovery-service
       # - keycloak-ms
 
-#   customer-service:
-#     container_name: customer-service
-# #    deploy:
-# #      replicas: 1
-# #      resources:
-# #        limits:
-# #          cpus: '0.256'
-# #          memory: 512M
-# #        reservations:
-# #          cpus: '0.128'
-# #          memory: 128M
-#     build:
-#       context: ./customer
-#       dockerfile: Dockerfile
-#     restart: always
-#     environment:
-#       MONGODB_URI: mongodb://user:1234@116.206.127.212:27017/admin
-#       SPRING_CONFIG_IMPORT: optional:configserver:http://config-server:8888
-#       EUREKA_INSTANCE_HOSTNAME: discovery-service:88761
-#       EUREKA_CLIENT_SERVICE_URL_DEFAULT_ZONE: http://discovery-service:8761/eureka/
-#       ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
-#     ports:
-#       - 8090:8090
-#     networks:
-#       - food-delivery-net
-#     depends_on:
-#       - discovery-service
-#       - gateway-service
-#       - zipkin
+  customer-service:
+    container_name: customer-service
+#    deploy:
+#      replicas: 1
+#      resources:
+#        limits:
+#          cpus: '0.256'
+#          memory: 512M
+#        reservations:
+#          cpus: '0.128'
+#          memory: 128M
+    image: 211125430268.dkr.ecr.ap-southeast-1.amazonaws.com/food-delivery-customer-service:latest
+    restart: always
+    environment:
+      SPRING_CONFIG_IMPORT: optional:configserver:http://food-delivery-config-server:8888
+      EUREKA_INSTANCE_HOSTNAME: food-delivery-discovery-service
+      EUREKA_CLIENT_SERVICE_URL_DEFAULT_ZONE: http://food-delivery-discovery-service:8761/eureka/
+      # ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
+    ports:
+      - 8093:8093
+    networks:
+      - food-delivery-net
+    depends_on:
+      - food-delivery-discovery-service
+      - food-delivery-gateway-service
+      # - zipkin
 #   keycloak-ms:
 #     container_name: keycloak-ms
 #     image: quay.io/keycloak/keycloak:24.0.2
