--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,8 +70,8 @@ services:
       - food-delivery-discovery-service
       # - keycloak-ms
 
-  customer-service:
-    container_name: customer-service
+  food-delivery-customer-service:
+    container_name: food-delivery-customer-service
 #    deploy:
 #      replicas: 1
 #      resources:
